[package]
name = "fenwick-tree"
description = "An implementation of a binary indexed tree (Fenwick tree) data structure in Rust."
authors = ["JoshuaLight <j.light.developer@gmail.com>"]

repository = "https://github.com/JoshuaLight/fenwick-tree-rs"
readme = "README.md"
license = "MIT"
version = "0.0.1"
edition = "2018"

keywords = ["fenwick", "tree"]
categories = ["data-structures"]

[dependencies]
