[package]
name = "fenwick-tree"
description = "An implementation of a binary indexed tree (Fenwick tree) data structure in Rust."
authors = ["JoshuaLight <j.light.developer@gmail.com>"]

repository = "https://github.com/JoshuaLight/fenwick-tree-rs"
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"

keywords = ["fenwick", "tree"]
categories = ["data-structures"]

[dependencies]
num-traits = "0.2"
